--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -4,3 +4,17 @@
 h1 {
   color: red;
 }
+ #index-title {
+    text-align: center;
+    font-size: 15px;
+    color: blue;
+  }
+
+  section {
+    background: #5998ff;
+    border-style: solid;
+    border-width: 5px;
+    margin: 5px 5px 5px 5px;
+    padding: 5px 5px 5px 5px;
+  }
+View
